fix: Card.java withdraw logic